Spell out test resource paths