@@ -5,6 +5,7 @@ import org.junit.jupiter.api.Test;
 import org.monarchinitiative.svart.assembly.GenomicAssemblies;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -12,7 +13,7 @@ import static org.hamcrest.Matchers.hasSize;
 
 public class RepetitiveRegionParserTest {
 
-    private static final Path testFilePath = Path.of(RepetitiveRegionParserTest.class.getResource("hg38.fa.out.10lines.gz").getPath());
+    private static final Path testFilePath = Paths.get("src/test/resources/repeats/hg38.fa.out.10lines.gz");
 
     @Test
     public void parse() throws Exception {
