@@ -11,6 +11,7 @@ import org.monarchinitiative.svart.assembly.GenomicAssemblies;
 import org.monarchinitiative.svart.assembly.GenomicAssembly;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 
@@ -51,7 +52,7 @@ public class ClingenGeneCurationParserTest {
 
     @Test
     public void parse() throws Exception {
-        Path geneListPath = Path.of(ClingenGeneCurationParserTest.class.getResource("ClinGen_gene_curation_list_GRCh38.15lines.tsv").getPath());
+        Path geneListPath = Paths.get("src/test/resources/dosage/ClinGen_gene_curation_list_GRCh38.15lines.tsv");
         Map<TermId, GenomicRegion> geneById = makeGeneByIdMap();
         Map<Integer, Integer> ncbiGeneToHgnc = makeNcbiGeneToHgnc();
 
